--- a/Ejercicios-HTML/ej_formulario.html
+++ b/Ejercicios-HTML/ej_formulario.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Ejercicio Formulario</title>
@@ -10,34 +11,65 @@
         }
     </style>
 </head>
-<body>
-<!--Cree un Formulario con los campos que se proponen a continuacion-->
-<!--Agregue el atributo legend-->
 
-<!--Si tienes dudas de como hacer un formulario, puedes consultar:
+<body>
+    <!--Cree un Formulario con los campos que se proponen a continuacion-->
+    <!--Agregue el atributo legend-->
+
+    <!--Si tienes dudas de como hacer un formulario, puedes consultar:
     https://www.w3schools.com/html/tryit.asp?filename=tryhtml_elem_output-->
 
-<h3>Suscribase a Nuestro Portal de Noticias! Crear una cuenta es rápido!</h3>
-Nombre:
-Apellido:
-Sexo: Masculino Femenino
-Edad:
-Email:
-Usuario:
-Password:
-Confirmar Password:
-
-Tipo de servicio: Free / Standard / Premium
-Tema:
-Política
-Negocios
-Tecnología
-Salud
-
-Agregue un comentario:
-
-Boton de Enviar
-
-
+    <h3>Suscribase a Nuestro Portal de Noticias! Crear una cuenta es rápido!</h3>
+    <form>
+        <p>
+            Nombre: <input type="text" name="nombre" size="40" maxlength="30" placeholder="Ingrese su Nombre">
+        </p>
+        <p>
+            Apellido: <input type="text" name="apellido" size="40" maxlength="30" placeholder="Ingrese su Apellido">
+        </p>
+        <p>
+            Sexo:
+            <input type="radio" name="Genero" value="Masculino"> Masculino
+            <input type="radio" name="Genero" value="Femenino"> Femenino
+            <input type="radio" name="Genero" value="No Comp"> Prefiero No Compartirlo
+        </p>
+        <p>
+            Edad: <input type="number" name="edad" maxlength="30" placeholder="Ingrese su Edad">
+        </p>
+        <p>
+            Email: <input type="text" name="email" size="40" maxlength="30" placeholder="Ingrese su Email">
+        </p>
+        <p>
+            Usuario: <input type="text" name="usuario" size="40" maxlength="30" placeholder="Ingrese su Usario">
+        </p>
+        <p>
+            Password: <input type="password" name="pass" size="40" maxlength="30" placeholder="Ingrese su Password">
+        </p>
+        <p>
+            Confirmar Password <input type="password" name="pass2" size="40" maxlength="30">
+        </p>
+        <p>
+            Tipo de servicio:
+            <select name="Tipo servicio">
+                <option value="Free">Free</option>
+                <option value="Standard">Standard</option>
+                <option value="Premium">Premium</option>
+            </select>
+        </p>
+        <p>
+            Tema:
+            <input type="checkbox" name="ck_politica" value="politica">Política
+            <input type="checkbox" name="ck_negocios" value="negocios">Negocios
+            <input type="checkbox" name="ck_tecnologia" value="tecnologia">Tecnología
+            <input type="checkbox" name="ck_salud" value="salud">Salud
+        </p>
+        <p>
+            Agregue un comentario:
+            <textarea>
+                Escriba un comentario...
+            </textarea>
+        </p>
+        <button type="button">Boton de Enviar</button>
+    </form>
 </body>
 </html>
