--- a/Ejercicios-HTML/ej_tablas.html
+++ b/Ejercicios-HTML/ej_tablas.html
@@ -21,6 +21,9 @@
 
 <body>
     <table>
+        <caption>
+            Congresos y Eventos
+        </caption>
         <tr>
             <thead>
                 <th>Siglas</th>
