--- a/Ejercicios-HTML/ej_formulario.html
+++ b/Ejercicios-HTML/ej_formulario.html
@@ -20,56 +20,85 @@
     https://www.w3schools.com/html/tryit.asp?filename=tryhtml_elem_output-->
 
     <h3>Suscribase a Nuestro Portal de Noticias! Crear una cuenta es rápido!</h3>
-    <form>
-        <p>
-            Nombre: <input type="text" name="nombre" size="40" maxlength="30" placeholder="Ingrese su Nombre">
-        </p>
-        <p>
-            Apellido: <input type="text" name="apellido" size="40" maxlength="30" placeholder="Ingrese su Apellido">
-        </p>
-        <p>
-            Sexo:
-            <input type="radio" name="Genero" value="Masculino"> Masculino
-            <input type="radio" name="Genero" value="Femenino"> Femenino
-            <input type="radio" name="Genero" value="No Comp"> Prefiero No Compartirlo
-        </p>
-        <p>
-            Edad: <input type="number" name="edad" maxlength="30" placeholder="Ingrese su Edad">
-        </p>
-        <p>
-            Email: <input type="text" name="email" size="40" maxlength="30" placeholder="Ingrese su Email">
-        </p>
-        <p>
-            Usuario: <input type="text" name="usuario" size="40" maxlength="30" placeholder="Ingrese su Usario">
-        </p>
-        <p>
-            Password: <input type="password" name="pass" size="40" maxlength="30" placeholder="Ingrese su Password">
-        </p>
-        <p>
-            Confirmar Password <input type="password" name="pass2" size="40" maxlength="30">
-        </p>
-        <p>
-            Tipo de servicio:
-            <select name="Tipo servicio">
-                <option value="Free">Free</option>
-                <option value="Standard">Standard</option>
-                <option value="Premium">Premium</option>
-            </select>
-        </p>
-        <p>
-            Tema:
-            <input type="checkbox" name="ck_politica" value="politica">Política
-            <input type="checkbox" name="ck_negocios" value="negocios">Negocios
-            <input type="checkbox" name="ck_tecnologia" value="tecnologia">Tecnología
-            <input type="checkbox" name="ck_salud" value="salud">Salud
-        </p>
-        <p>
-            Agregue un comentario:
-            <textarea>
+    <form name="Susbribirse">
+        <fieldset>
+            <legend> Persona </legend>
+            <p>
+                <label for="nombre">Nombre: </label>
+                <input type="text" name="nombre" id="Nombre" size="40" maxlength="30" placeholder="Ingrese su Nombre">
+
+            </p>
+            <p>
+                <label for="apellido">Apellido: </label>
+                <input type="text" name="apellido" id="apellido" size="40" maxlength="30"
+                    placeholder="Ingrese su Apellido">
+
+            </p>
+            <p>
+                Sexo:
+                <input type="radio" name="Genero" value="Masculino" id="masculino">
+                <label for="masculino">Masculino</label>
+                <input type="radio" name="Genero" value="Femenino" id="femenino">
+                <label for="femenino">Femenino</label>
+                <input type="radio" name="Genero" value="No Comp" id="noCompartir">
+                <label for="noCompartir">Prefiero No Compartirlo</label>
+            </p>
+            <p>
+                <label for="edad">Edad: </label>
+                <input type="number" name="edad" maxlength="30" placeholder="Ingrese su Edad" id="edad">
+
+            </p>
+        </fieldset>
+        <fieldset>
+            <legend> Cuenta </legend>
+            <p>
+                <label for="email">Email: </label>
+                <input type="text" name="email" size="40" maxlength="30" placeholder="Ingrese su Email" id="email">
+            </p>
+            <p>
+                <label for="usuario">Usuario: </label>
+                <input type="text" name="usuario" size="40" maxlength="30" placeholder="Ingrese su Usario" id="usuario">
+            </p>
+            <p>
+                <label for="password">Password: </label>
+                <input type="password" name="pass" size="40" maxlength="30" placeholder="Ingrese su Password"
+                    id="password">
+            </p>
+            <p>
+                <label for="confirmar-pass">Confirmar Password: </label>
+                <input type="password" name="pass2" size="40" maxlength="30" id="confirmar-pass">
+            </p>
+        </fieldset>
+        <fieldset>
+            <legend> Tipo Servicio </legend>
+            <p>
+                <label for="tipo-servicio">Tipo de servicio:</label>
+                <select name="Tipo servicio">
+                    <option value="Free">Free</option>
+                    <option value="Standard">Standard</option>
+                    <option value="Premium">Premium</option>
+                </select>
+            </p>
+            <p>
+                Tema:
+                <label for="politica">Política</label>
+                <input type="checkbox" name="ck_politica" id="politica" value="politica">
+                <label for="negocios">Negocios</label>
+                <input type="checkbox" name="ck_negocios" id="negocios" value="negocios">
+                <label for="tecnologia">Tecnología</label>
+                <input type="checkbox" name="ck_tecnologia" id="tecnologia" value="tecnologia">
+                <label for="salud">Salud</label>
+                <input type="checkbox" name="ck_salud" id="salud" value="salud">
+            </p>
+            <p>
+                Agregue un comentario:
+                <textarea>
                 Escriba un comentario...
             </textarea>
-        </p>
+            </p>
+        </fieldset>
         <button type="button">Boton de Enviar</button>
     </form>
 </body>
+
 </html>
