--- a/Ejercicios-CSS/ej_cv.html
+++ b/Ejercicios-CSS/ej_cv.html
@@ -1,44 +1,72 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <title>CV Nombre Apellido</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Edu+NSW+ACT+Cursive:wght@400..700&family=Playwrite+CA:wght@100..400&display=swap"
+        rel="stylesheet">
+
+    <style>
+        div {
+            border: 1px solid black;
+            margin: 20px;
+            padding: 10px;
+            background-color: gainsboro;
+        }
+
+        #icono_usuario {
+            width: 10px;
+        }
+
+        body {
+            text-align: center;
+            font-family: "Playwrite Canada", cursive;
+        }
+    </style>
 </head>
+
 <body>
 
-<div>
-    <h1>Nombre Alumno</h1>
-    <h2>Ing. en Computacion</h2>
-</div>
-
-<div>
-    <h3>Datos Personales</h3>
-    <p><span>Fecha de Nacimiento:</span> dd/mm/aaaa</p>
-    <p><span>Email:</span> email@email.com</p>
-</div>
-
-<div>
-    <h3>Formacion Academica</h3>
-    <p><span>Carrera:</span> Ingeniería XXXXX</p>
-    <p><span>Universidad:</span> Universidad Católica de Córdoba</p>
-    <p><span>Año de Ingreso:</span> 2018</p>
-</div>
-
-<div>
-    <h3>Cursos</h3>
-
     <div>
-        <h4>Nombre Curso 1</h4>
-        <p><span>Lugar:</span> Nombre Institución</p>
-        <p><span>Año:</span> XXXX </p>
+        <img src="imagenes/iconousuario.png" alt="icono_usuario">
+        <h1>Nombre Alumno</h1>
+        <h2>Ing. en Computacion</h2>
     </div>
 
     <div>
-        <h4>Nombre Curso 2</h4>
-        <p><span>Lugar:</span> Nombre Institución</p>
-        <p><span>Año:</span> XXXX </p>
+        <h3>Datos Personales</h3>
+        <p><span>Fecha de Nacimiento:</span> dd/mm/aaaa</p>
+        <p><span>Email:</span> email@email.com</p>
     </div>
-</div>
+
+    <div>
+        <h3>Formacion Academica</h3>
+        <p><span>Carrera:</span> Ingeniería XXXXX</p>
+        <p><span>Universidad:</span> Universidad Católica de Córdoba</p>
+        <p><span>Año de Ingreso:</span> 2018</p>
+    </div>
+
+    <div>
+        <h3>Cursos</h3>
+
+        <div>
+            <h4>Nombre Curso 1</h4>
+            <p><span>Lugar:</span> Nombre Institución</p>
+            <p><span>Año:</span> XXXX </p>
+        </div>
+
+        <div>
+            <h4>Nombre Curso 2</h4>
+            <p><span>Lugar:</span> Nombre Institución</p>
+            <p><span>Año:</span> XXXX </p>
+        </div>
+    </div>
 
 </body>
+
 </html>
