--- a/Ejercicios-HTML/ej_tablas.html
+++ b/Ejercicios-HTML/ej_tablas.html
@@ -24,6 +24,7 @@
         <caption>
             Congresos y Eventos
         </caption>
+        <!-- Cabecera de la tabla -->
         <tr>
             <thead>
                 <th>Siglas</th>
