--- a/Ejercicios-HTML/ej_listas.html
+++ b/Ejercicios-HTML/ej_listas.html
@@ -32,17 +32,14 @@
     <ol>
         <li>Tamizar la fécula de maíz, la harina, el bicarbonato y el polvo para hornear.</li>
         <li>En un bol, batir la manteca con azúcar.</li>
-        <li>Agregar las yemas de a una, mezclando bien cada vez, luego el coñac y poco a poco los ingredientes secos ya
-            tamizados.</li>
+        <li>Agregar las yemas de a una, mezclando bien cada vez, luego el coñac y poco a poco los ingredientes secos ya tamizados.</li>
         <li>Incorporar la esencia de vainilla y la ralladura de limón y mezclar bien.</li>
-        <li>Separar la masa en tres partes, dejar una parte blanca y colorear las otras dos con los colores elegidos.
-        </li>
-        <li>Formar una masa, sin amasarla, y estirar de 1/2 cm de espesor sobre una mesa espolvoreada con harina. Cortar
-            con moldes en forma de corazón.</li>
+        <li>Separar la masa en tres partes, dejar una parte blanca y colorear las otras dos con los colores elegidos. </li>
+        <li>Formar una masa, sin amasarla, y estirar de 1/2 cm de espesor sobre una mesa espolvoreada con harina. Cortar con moldes en forma de corazón.</li>
         <li>Colocar en una placa limpia y cocinar en horno moderado durante 15 minutos. Desmoldar y enfriar.</li>
         <li>Formar los alfajores, uniéndolos de a dos con dulce de leche en el medio.</li>
         <li>Pintarles el borde con dulce y pasarlos por coco rallado.</li>
     </ol>
-    <img src="imagenes/foto_alfajores.jpg" alt="alfajores de maicena" </body>
+    <img src="imagenes/foto_alfajores.jpg" alt="Alfajores de Maicena" </body>
 
 </html>
