--- a/Ejercicios-HTML/ej_noticia.html
+++ b/Ejercicios-HTML/ej_noticia.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="es">
 
+<style>
+    #logonoticia {
+        width: 20px;
+    }
+</style>
+
 <head>
     <meta charset="UTF-8">
     <title>Ejercicio Secciones</title>
@@ -10,7 +16,7 @@
     <!--Agregar la etiqueta semántica para la cabecera. La cabecera debe contener un titulo-->
     <!--Separe la noticia en parrafos-->
     <header>
-        <img src="imagenes/logonoticias.avif" alt="Logo Noticia">
+        <img src="imagenes/logonoticia.png" alt="logonoticia">
         <h1>Diario On-line</h1>
     </header>
     <nav>
