--- a/Ejercicios-JavaScript/productos.html
+++ b/Ejercicios-JavaScript/productos.html
@@ -2,50 +2,68 @@
 <html lang="es">
 
 <head>
-    <title>Catalogo de Productos</title>
+    <title>Catálogo de Productos</title>
     <link href="catalogo.css" type="text/css" rel="stylesheet" />
     <script type="text/javascript" src="tienda.js"></script>
+    <meta charset="UTF-8">
 </head>
 
-<body class="grid-container" onload="mostrarCatalogo()">
-    <header class="item1">Catalogo de Productos</header>
+<body class="grid-container" onload="mostrarCatalogo();contarProductos()">
+    <header class="item1">Catálogo de Productos</header>
     <nav class="item2">
-        <a href="productos.html">Catalogo de Productos</a>
+        <a href="productos.html">Catálogo de Productos</a>
         <a href="carrito.html">Carrito de Compras</a>
+        <div id="cant-prod">0</div>
     </nav>
     <aside class="item3">
         <form name="filter">
             <fieldset>
                 <legend>Busqueda</legend>
                 <label for="search">Buscar: </label>
-                <input type="text" id="search" name="search" placeholder="palabra...">
+                <input type="text" id="search" name="search" placeholder="palabra..." onchange="filtrarProductos()">
             </fieldset>
             <fieldset>
                 <legend>Precios</legend>
                 <p>
                     <label for="price min">Minimo</label>
-                    <input type="number" id="price-min" name="price-min" value="0" min="0">
+                    <input type="number" id="price-min" name="price-min" onchange="filtrarProductos()">
                 </p>
                 <p>
                     <label for="price max">Maximo</label>
-                    <input type="number" id="price-max" name="price-max" value="50" min="50">
+                    <input type="number" id="price-max" name="price-max" onchange="filtrarProductos()">
                 </p>
+            </fieldset>
+            <fieldset>
+                <legend>Marca</legend>
+                <select id="marca" onchange="filtrarProductos()">
+                    <option value="Todas">Todas</option>
+                    <option value="Gran Marc">Gran Marc</option>
+                    <option value="Daedo">Daedo</option>
+                </select>
             </fieldset>
             <fieldset>
                 <legend>Tipo de Producto</legend>
                 <p>
-                    <input type="checkbox" id="protectores" name="tipo" value="protectores">
+                    <input type="checkbox" id="protectores" name="tipo" value="protectores"
+                        onchange="filtrarProductos()">
                     <label for="protectores">Protectores</label>
                 </p>
                 <p>
-                    <input type="checkbox" id="entrenamiento" name="tipo" value="entrenamiento">
+                    <input type="checkbox" id="entrenamiento" name="tipo" value="entrenamiento"
+                        onchange="filtrarProductos()">
                     <label for="entrenamiento">Entrenamiento</label>
                 </p>
                 <p>
-                    <input type="checkbox" id="dobok" name="tipo" value="dobok">
+                    <input type="checkbox" id="dobok" name="tipo" value="dobok" onchange="filtrarProductos()">
                     <label for="dobok">Dobok</label>
                 </p>
             </fieldset>
+            <select id="order" onchange="orderCatalogo()">
+                <option value="menor">Precio: Menor a Mayor</option>
+                <option value="mayor">Precio: Mayor a Menor</option>
+                <option value="a-z">Nombre: A-Z</option>
+                <option value="z-a">Nombre: Z-A</option>
+            </select>
         </form>
     </aside>
 
